last update docker-compose

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
             scope: openid
         provider:
           keycloak:
-            issuer-uri: http://localhost:8080/realms/SpringBootKeycloak
+            issuer-uri: http://keycloak-service:8080/realms/SpringBootKeycloak
             user-name-attribute: preferred_username
       resourceserver:
         jwt:
