--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,11 +19,11 @@ spring:
             scope: openid
         provider:
           keycloak:
-            issuer-uri: http://keycloak-service:8080/realms/SpringBootKeycloak
+            issuer-uri: http://keycloak-service:8080/auth/
             user-name-attribute: preferred_username
       resourceserver:
         jwt:
-          issuer-uri: http://keycloak-service/realms/SpringBootKeycloak/
+          issuer-uri: http://keycloak-service/auth/
   jpa:
     hibernate:
       ddl-auto: update
