--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,12 +15,12 @@ spring:
         registration:
           keycloak:
             client-id: login-app
-            #authorization-grant-type: authorization_code
+            authorization-grant-type: authorization_code
             scope: openid
-            authorization-grant-type: client_credentials
+            #authorization-grant-type: client_credentials
         provider:
           keycloak:
-            issuer-uri: http://127.0.0.1:8080/realms/SpringBootKeycloak/account
+            issuer-uri: http://keycloak-service:8080/realms/SpringBootKeycloak/account
             user-name-attribute: preferred_username
       resourceserver:
         jwt:
