--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,16 +15,15 @@ spring:
         registration:
           keycloak:
             client-id: login-app
-            #authorization-grant-type: authorization_code
+            authorization-grant-type: authorization_code
             scope: openid
-            authorization-grant-type: client_credentials
         provider:
           keycloak:
-            issuer-uri: http://keycloak-service:8080/realms/SpringBootKeycloak/account
+            issuer-uri: http://keycloak-service:8080/realms/SpringBootKeycloak
             user-name-attribute: preferred_username
       resourceserver:
         jwt:
-          issuer-uri: http://keycloak-service/realms/SpringBootKeycloak/account/
+          issuer-uri: http://keycloak-service/realms/SpringBootKeycloak
   jpa:
     hibernate:
       ddl-auto: update
