--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,21 +9,21 @@ spring:
     driverClassName: com.mysql.cj.jdbc.Driver
   application:
     name: spring-admin
-  security:
-    oauth2:
-      client:
-        registration:
-          keycloak:
-            client-id: login-app
-            authorization-grant-type: authorization_code
-            scope: openid
-        provider:
-          keycloak:
-            issuer-uri: http://localhost:8080/realms/SpringBootKeycloak
-            user-name-attribute: preferred_username
-      resourceserver:
-        jwt:
-          issuer-uri: http://localhost/realms/SpringBootKeycloak
+#  security:
+#    oauth2:
+#      client:
+#        registration:
+#          keycloak:
+#            client-id: login-app
+#            authorization-grant-type: authorization_code
+#            scope: openid
+#        provider:
+#          keycloak:
+#            issuer-uri: http://keycloak-service:8080/realms/SpringBootKeycloak
+#            user-name-attribute: preferred_username
+#      resourceserver:
+#        jwt:
+#          issuer-uri: http://keycloak-service/realms/SpringBootKeycloak
   jpa:
     hibernate:
       ddl-auto: update
